--- a/src/Components/Skills/_skills.scss
+++ b/src/Components/Skills/_skills.scss
@@ -32,7 +32,10 @@
   text-align: justify;
 }
 .skills-graphic {
-  z-index: $above-confetti-layer;
+  img {
+    position: relative;
+    z-index: $above-confetti-layer;
+  }
 }
 #chart {
   display: block;
